deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waggle
spec:
  selector:
    app: waggle
  ports:
    - name: http
      port: 80
      targetPort: http
